--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,8 @@ jobs:
   tests:
     runs-on: ubuntu-latest
 
-  steps:
-    - name: Check out code
-      uses: actions/checkout@v3
+    steps:
+    - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
