--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+  
 
     steps:
     - uses: actions/checkout@v3
@@ -26,3 +27,25 @@ jobs:
         python -m flake8 backend/
         cd backend/
         python manage.py test
+
+  build_and_push_to_docker_hub:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker 
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.<DOCKER_USERNAME> }} 
+          password: ${{ secrets.<DOCKER_PASSWORD> }} 
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend/
+          push: true
+          tags: vadimpich/taski_backend:latest 
+    
+    
