--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,13 @@ on:
     branches:
       - main
 
+env:
+  POSTGRES_USER: django_user
+  POSTGRES_PASSWORD: mysecretpassword
+  POSTGRES_DB: django
+  DB_HOST: db
+  DB_PORT: 5432
+
 jobs:
   tests:
     runs-on: ubuntu-latest
