--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,24 +29,25 @@ jobs:
         python manage.py test
 
   build_and_push_to_docker_hub:
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }} 
-          password: ${{ secrets.DOCKER_PASSWORD }} 
-      - name: Push to DockerHub
-        uses: docker/build-push-action@v4
-        with:
-          context: ./backend/
-          push: true
-          tags: vadimpich/taski_backend:latest 
+      name: Push Docker image to DockerHub
+      runs-on: ubuntu-latest
+      needs: tests
+      steps:
+        - name: Check out the repo
+          uses: actions/checkout@v3
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+        - name: Login to Docker 
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+        - name: Push to DockerHub
+          uses: docker/build-push-action@v4
+          with:
+            context: ./backend/
+            push: true
+            tags: ваш-логин-на-docker-hub/taski_backend:latest 
     
   frontend_tests:
     runs-on: ubuntu-latest
