--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           with:
             context: ./backend/
             push: true
-            tags: ваш-логин-на-docker-hub/taski_backend:latest 
+            tags: vadimpich/taski_backend:latest 
     
   frontend_tests:
     runs-on: ubuntu-latest
